# onestep

./: baseline_report.md  data  gpu_report.md  gpu_report_batched.md  gpu_report_batched_packed.md  onestepx_cache.json  publish.sh  pyproject.toml  requirements.txt  seed_onestepx.py  setup.cfg  setup.py  tmp_cache.json
.github/workflows/: python-publish.yml
benchmarks/: baseline_cpu.json  baseline_scaling.json  compression_micro.json  delta_micro.json  gpu_baseline.json  gpu_baseline_torch.json  gpu_batched_torch.json  gpu_batched_torch_packed.json  gpu_resident_baseline.json
onestepx-test/: compliance_gate.py
onestepx-test/onestepx-bench/: onestepx_driver_simd.py  onestepx_fast.py  onestepx_queries.py  onestepx_queries_ext.py  pyproject.toml  setup.cfg  sitecustomize.py
onestepx-test/onestepx-bench/baseline/: baseline.json
onestepx-test/onestepx-bench/onestepx_bench/: benchmarks.py  cli.py
onestepx-test/onestepx-bench/onestepx_core/: __init__.py
onestepx-test/onestepx-bench/onestepx_core/benches/: bench_day1.jsonl
onestepx-test/onestepx-bench/onestepx_core/delta/: __init__.py  collapse_delta.py  depindex.py  diffing.py  full_build.py  metrics.py
onestepx-test/onestepx-bench/onestepx_core/model/: __init__.py  graph_types.py  terminal.py
onestepx-test/onestepx-bench/onestepx_core/tests/: common.py  test_day1_bulk.py  test_day1_leaf.py  test_day1_root.py
onestepx-test/onestepx-bench/src/onestepx_bench/: cli.py  mock_driver.py
onestepx-test/onestepx-demo/: README.md  onestepx_cache.json  onestepx_driver.py  onestepx_driver_seeded.py  onestepx_showcase.py  pyproject.toml  setup.cfg  test_debug.py
onestepx-test/onestepx-demo/data/: projects.json
onestepx-test/onestepx-demo/src/onestepx/: build.py  cache.py  cli_build.py  ingest.py  reducers.py
onestepx-test/onestepx-demo/src/onestepx_tools/: build.py  cache.py  cli_build.py  ingest.py  reducers.py
onestepx-test/onestepx-demo/tests/: test_build_and_flags.py  test_smoke.py
onestepx_core/benches/: bench_day1.jsonl
onestepx_tools/: __init__.py  cache.py  ingest.py
src/onestep.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/onestepx/: __init__.py  compressor.py  hierarchy.py
src/onestepx_delta/: __init__.py  collapse_delta.py  compat.py
src/onestepx_gpu/: __init__.py  engine.py  terminal_gpu.py
src/onestepx_tools/: __init__.py  cache.py  ingest.py
tests/: test_onestep.py
