[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onestep"
version = "0.1.1"
description = "Instant hierarchical collapse to terminal node (O(1) traversal)"
readme = "README.md"
authors = [{ name = "Maulud Sadiq", email = "your@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
