[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onestep"
version = "0.1.2"
description = "Instant hierarchical collapse to terminal node (O(1) traversal)"
readme = "README.md"
authors = [{ name = "Maulud Sadiq", email = "your@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/mauludsadiq/onestep"
"Bug Tracker" = "https://github.com/mauludsadiq/onestep/issues"

# >>> tell setuptools about the src/ layout <<<
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["onestep*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q"
