[metadata]
name = onestep
version = 0.1.4
description = Instant hierarchical collapse to terminal node (O(1) traversal)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Maulud Sadiq
url = https://github.com/mauludsadiq/onestep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.8
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =

[options.packages.find]
where = src
include = onestep*
