[metadata]
name = onestepx
version = 0.2.5
description = Instant hierarchical collapse to terminal node (O(1) traversal)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Maulud Sadiq
author_email = mauludsadiq@gmail.com
url = https://github.com/mauludsadiq/onestep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
include_package_data = True
install_requires =

