[metadata]
name = onestepx
version = 0.3.5
author = Maulud Sadiq
author_email = mauludsadiq@example.com
description = Collapse any hierarchy to a single terminal representation T
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    onestepx-build = onestepx.cli_build:main
